nav alignment fixed clock image changed

--- a/src/app/components/nav-bar/nav-bar.component.css
+++ b/src/app/components/nav-bar/nav-bar.component.css
@@ -42,7 +42,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 30px 50px;
+  padding: 30px 30px;
   margin: auto;
   width: 100%;
 }
